actualiza URLS y views + templates

--- a/PortalMedic/core/templates/core/index.html
+++ b/PortalMedic/core/templates/core/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Bienvenidos al PortalMedic!</h1>
+
+    <button><a href="{% url 'medicos:index' %}">Ir a seccion "Médicos"</a></button>
+    <button><a href="{% url 'pacientes:index' %}">Ir a seccion "Pacientes"</a></button>
 </body>
 </html>
