--- a/PortalMedic/pacientes/templates/pacientes/index.html
+++ b/PortalMedic/pacientes/templates/pacientes/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>PortalMedic - Pacientes</h1>
+
+    <button><a href="{% url 'core:index' %}">Volver a HOME</a></button>
 </body>
 </html>
