--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -1,38 +1,60 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        
-        <title>
-            {% block title %}
-            {% endblock title %}
-        </title>
-        
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'core/css/styles.css' %}" rel="stylesheet" />
-    </head>
-    <body id="page-top">
 
-        {% block content %}
-        {% endblock content %}
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
-</html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+
+    <title>
+        {% block title %}
+        {% endblock title %}
+    </title>
+
+    <link rel="icon" type="image/x-icon" href="{% static 'core/assets/favicon.ico' %} " />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{% static 'core/css/styles.css' %}" rel="stylesheet" />
+</head>
+
+
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container px-5">
+        <a class="navbar-brand" href="core:index">PortalMedic - Coder2024</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'core:index' %}">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">Proyectos</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Sobre Nostros</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send/?phone=%2B5493814761261&text&type=phone_number&app_absent=0" target="_blank">Contacto</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+{% endblock navbar %}
+
+<body>
+    {% block content %}
+    
+    {% endblock content %}
+</body>
+
+{% block footer %}
+    <footer class="footer bg-black small text-center text-white-50 mt-auto">
+        <div class="container px-4 px-lg-5">Trabajo realizado para CODERHOUSE por OSCAR FARIAS</div>
+        <div class="container px-4 px-lg-5">Profesor: Estevan Acevedo - Tutoria: Juan Manuel Romano</div>
+    </footer>
+{% endblock footer %}
