--- a/PortalMedic/core/templates/core/index.html
+++ b/PortalMedic/core/templates/core/index.html
@@ -1,190 +1,141 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block title %}
-    PortalMedic
+PortalMedic - Inicio
 {% endblock title %}
 
 {% block content %}
-    
-<body>
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-                <div class="container px-4 px-lg-5">
-                    <a class="navbar-brand" href="#page-top">Ir arriba</a>
-                    <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        Menu
-                        <i class="fas fa-bars"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="#about">Sobre Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send/?phone=%2B5493814761261&text&type=phone_number&app_absent=0" target="_blank">Contacto</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <!-- Masthead-->
-            <header class="masthead">
-                <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                    <div class="d-flex justify-content-center">
-                        <div class="text-center">
-                            <h1 class="mx-auto my-0 text-uppercase">PortalMedic</h1>
-                            <h2 class="text-white-50 mx-auto mt-2 mb-5">Dirigido al personal Médico, donde podrá hacer un seguimiento cercano a sus pacientes</h2>
-                            <a class="btn btn-primary" href="{% url 'medicos:index' %}">SOY MÉDICO</a>
-                            <a class="btn btn-primary" href="{% url 'pacientes:index' %}">SOY PACIENTE</a>
-                        </div>
-                    </div>
-                </div>
-                
-            </header>
-            <!-- About-->
-            <section class="about-section text-center" id="about">
-                <div class="container px-4 px-lg-5">
-                    <div class="row gx-4 gx-lg-5 justify-content-center">
-                        <div class="col-lg-8">
-                            <h2 class="text-white mb-4">PortalMedic®</h2>
-                            <p class="text-white-50">
-                                Éste proyecto está dirigido al personal Médico, en el cual dispondrá la posibilidad de llevar un registro único por paciente, donde podrá administrar de una manera simple las consultas o estudios realizados por el mísmo, ademas de tener su historia clínica para un mejor seguimiento.
-                                El médico/usuario de la aplicación contará con un sistema ordenado que le permitirá tener la información de forma rápida y sencilla, facilitando la tarea diaria sin la necesidad de tener que buscar la historia clínica de un paciente en papel.                            </p>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
-                </div>
-            </section>
-            <!-- Projects-->
-            <section class="projects-section bg-light" id="projects">
-                <div class="container px-4 px-lg-5">
-                    <!-- Featured Project Row-->
-                    <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                        <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                        <div class="col-xl-4 col-lg-5">
-                            <div class="featured-text text-center text-lg-left">
-                                <h4>Shoreline</h4>
-                                <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Project One Row-->
-                    <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                        <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                        <div class="col-lg-6">
-                            <div class="bg-black text-center h-100 project">
-                                <div class="d-flex h-100">
-                                    <div class="project-text w-100 my-auto text-center text-lg-left">
-                                        <h4 class="text-white">Misty</h4>
-                                        <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Project Two Row-->
-                    <div class="row gx-0 justify-content-center">
-                        <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                        <div class="col-lg-6 order-lg-first">
-                            <div class="bg-black text-center h-100 project">
-                                <div class="d-flex h-100">
-                                    <div class="project-text w-100 my-auto text-center text-lg-right">
-                                        <h4 class="text-white">Mountains</h4>
-                                        <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well!</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- Signup-->
-            <section class="signup-section" id="signup">
-                <div class="container px-4 px-lg-5">
-                    <div class="row gx-4 gx-lg-5">
-                        <div class="col-md-10 col-lg-8 mx-auto text-center">
-                            <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- * * SB Forms Contact Form * *-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- This form is pre-integrated with SB Forms.-->
-                            <!-- To make this form functional, sign up at-->
-                            <!-- https://startbootstrap.com/solution/contact-forms-->
-                            <!-- to get an API token!-->
-                            <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                <!-- Email address input-->
-                                <div class="row input-group-newsletter">
-                                    <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                    <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                                </div>
-                                <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                                <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
-                                <!-- Submit success message-->
-                                <!---->
-                                <!-- This is what your users will see when the form-->
-                                <!-- has successfully submitted-->
-                                <div class="d-none" id="submitSuccessMessage">
-                                    <div class="text-center mb-3 mt-2 text-white">
-                                        <div class="fw-bolder">Form submission successful!</div>
-                                        To activate this form, sign up at
-                                        <br />
-                                        <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                    </div>
-                                </div>
-                                <!-- Submit error message-->
-                                <!---->
-                                <!-- This is what your users will see when there is-->
-                                <!-- an error submitting the form-->
-                                <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- Contact-->
-            <section class="contact-section bg-black">
-                <div class="container px-4 px-lg-5">
-                    <div class="row gx-4 gx-lg-5">
-                        <div class="col-md-4 mb-3 mb-md-0">
-                            <div class="card py-4 h-100">
-                                <div class="card-body text-center">
-                                    <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                    <h4 class="text-uppercase m-0">Estamos en</h4>
-                                    <hr class="my-4 mx-auto" />
-                                    <div class="small text-black-50"> <a href="https://www.google.com/maps?q=-34.6688886,-58.5666538" target="_blank">Ver en Google</a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-3 mb-md-0">
-                            <div class="card py-4 h-100">
-                                <div class="card-body text-center">
-                                    <i class="fas fa-envelope text-primary mb-2"></i>
-                                    <h4 class="text-uppercase m-0">Email</h4>
-                                    <hr class="my-4 mx-auto" />
-                                    <div class="small text-black-50"><a href="mailto:oscarfarias297@gmail.com">Enviar correo electrónico</a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-3 mb-md-0">
-                            <div class="card py-4 h-100">
-                                <div class="card-body text-center">
-                                    <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                    <h4 class="text-uppercase m-0">Telefono</h4>
-                                    <hr class="my-4 mx-auto" />
-                                    <div class="small text-black-50">+549 (381) 476-1261</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="social d-flex justify-content-center">
-                        <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-            </section>
-            <!-- Footer-->
-            <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Trabajo realizdo para CODERHOUSE por OSCAR FARIAS</div></footer>
-            <!-- Bootstrap core JS-->
-</body>
-{% endblock content %}
 
-</html>
+{% block nav_bar %}
+{% endblock nav_bar %}
+
+
+<header class="masthead">
+    <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+        <div class="d-flex justify-content-center">
+            <div class="text-center">
+                <h1 class="mx-auto my-0 text-uppercase">PortalMedic</h1>
+                <h2 class="text-white-50 mx-auto mt-2 mb-5">Dirigido al personal Médico, donde podrá hacer un
+                    seguimiento cercano a sus pacientes</h2>
+                <a class="btn btn-primary" href="{% url 'medicos:index' %}">SOY MÉDICO</a>
+                <a class="btn btn-primary" href="{% url 'pacientes:index' %}">SOY PACIENTE</a>
+            </div>
+        </div>
+    </div>
+
+</header>
+<!-- About-->
+<section class="about-section text-center" id="about">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="text-white mb-4">PortalMedic®</h2>
+                <p class="text-white-50">
+                    Éste proyecto está dirigido al personal Médico, en el cual dispondrá la posibilidad de llevar un
+                    registro único por paciente, donde podrá administrar de una manera simple las consultas o estudios
+                    realizados por el mísmo, ademas de tener su historia clínica para un mejor seguimiento.
+                    El médico/usuario de la aplicación contará con un sistema ordenado que le permitirá tener la
+                    información de forma rápida y sencilla, facilitando la tarea diaria sin la necesidad de tener que
+                    buscar la historia clínica de un paciente en papel. </p>
+            </div>
+        </div>
+        <img class="img-fluid" src="{% static '/core/assets/img/logo_serpiente.png' %}" alt="..." />
+    </div>
+</section>
+<!-- Projects-->
+<section class="projects-section bg-light" id="projects">
+    <div class="container px-4 px-lg-5">
+        <!-- Featured Project Row-->
+        <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="{% static 'core/assets/img/bg-masthead.jpg' %}"
+                    alt="..." /></div>
+            <div class="col-xl-4 col-lg-5">
+                <div class="featured-text text-center text-lg-left">
+                    <h4>Nuestro Trabajo</h4>
+                    <p class="text-black-50 mb-0">
+                        Descubre una atención médica excepcional en nuestra institución clínica médica. Con un equipo dedicado de profesionales de la salud, nos comprometemos a brindar cuidado integral y compasivo a nuestros pacientes.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Project One Row-->
+        <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+            <div class="col-lg-6"><img class="img-fluid" src="{% static 'core/assets/img/demo-image-01.jpg' %} " alt="..." /></div>
+            <div class="col-lg-6">
+                <div class="bg-black text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text w-100 my-auto text-center text-lg-left">
+                            <h4 class="text-white">Que Hacemos</h4>
+                            <p class="mb-0 text-white-50">Desde consultas preventivas hasta tratamientos especializados, estamos aquí para guiarte en tu camino hacia una vida más saludable. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Project Two Row-->
+        <div class="row gx-0 justify-content-center">
+            <div class="col-lg-6"><img class="img-fluid" src="{% static 'core/assets/img/demo-image-02.jpg' %}" alt="..." /></div>
+            <div class="col-lg-6 order-lg-first">
+                <div class="bg-black text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text w-100 my-auto text-center text-lg-right">
+                            <h4 class="text-white">Tu Salud en Nuestras Manos</h4>
+                            <p class="mb-0 text-white-50">Confía en nosotros para ofrecerte la atención médica que necesitas, respaldada por años de experiencia y dedicación a la excelencia en el cuidado de la salud.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Contact-->
+<section class="contact-section bg-black">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5">
+            <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                        <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                        <h4 class="text-uppercase m-0">Estamos en</h4>
+                        <hr class="my-4 mx-auto" />
+                        <div class="small text-black-50"> <a
+                                href="https://www.google.com/maps?q=-34.6688886,-58.5666538" target="_blank">Ver en
+                                Google</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                        <i class="fas fa-envelope text-primary mb-2"></i>
+                        <h4 class="text-uppercase m-0">Email</h4>
+                        <hr class="my-4 mx-auto" />
+                        <div class="small text-black-50"><a href="mailto:oscarfarias297@gmail.com">Enviar correo
+                                electrónico</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                        <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                        <h4 class="text-uppercase m-0">Telefono</h4>
+                        <hr class="my-4 mx-auto" />
+                        <div class="small text-black-50">+549 (381) 476-1261</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="social d-flex justify-content-center">
+            <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+            <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+            <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+        </div>
+    </div>
+</section>
+
+
+{% endblock content %}
