--- a/PortalMedic/medicos/templates/medicos/medicos_list.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_list.html
@@ -6,43 +6,36 @@ PortalMedic > Listado
 
 {% block content %}
 <div class="container">
-
     <div class="pb-lg-3">
         <form action="{% url 'medicos:medicos_list' %}" method="get">
             <input type="text" name="busqueda" placeholder="Buscar...">
         </form>
     </div>
 
-    <h1 class="mt-5 mb-4">Cartilla de prestadores</h1>
+    <div class="d-flex justify-content-between align-items-center">
+        <h1 class="mt-5 mb-4">Cartilla de prestadores</h1>
+        <a href="{% url 'medicos:medicos_create' medico.id %}" class="btn btn-primary">Crear Prestador</a>
+    </div>
+
     {% for medico in medicos %}
     <div class="card mb-3">
-        <div class="card-body">
-            <h3 class="card-title">{{medico.apellido}}, {{ medico.nombre }}</h3>
-            <p class="card-text">Especialidad: {{ medico.especialidad }}</p>
-            
-            <form method="post">
-                {% csrf_token %}
-                <button type="submit">Borrar de Cartilla</button>
-                <p class="fs-5  fst-italic ">¿Confirma eliminar "{{ object.nombre }}"?</p>
-            </form>
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+                <h3 class="card-title">{{medico.apellido}}, {{ medico.nombre }}</h3>
+                <p class="card-text">Especialidad: {{ medico.especialidad }}</p>
+            </div>
+            <div>
+                <form method="post" action="{% url 'medicos:medicos_confirmar_eliminar' medico.id %}">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger mr-2">Eliminar</button>
+                </form>
+                <a href="{% url 'medicos:medicos_modificar' medico.id %}" class="btn btn-primary">Modificar</a>
+            </div>
         </div>
     </div>
     {% endfor %}
     <a href="{% url 'core:index' %}" class="btn btn-primary">Volver a HOME</a>
 </div>
 
-
-<form method="post">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <button type="submit">Guardar</button>
-</form>
-<a href="{% url 'medicos:index' %}">Volver al inicio de Producto</a>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 {% endblock content %}
