--- a/PortalMedic/pacientes/templates/pacientes/pacientes_list.html
+++ b/PortalMedic/pacientes/templates/pacientes/pacientes_list.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PortalMedic - Lista de Pacientes</title>
-</head>
-<body>
-    <h1>Listado de pacientes PortalMedic</h1>
-    <button><a href="{% url 'core:index' %}">Volver a HOME</a></button>
+{% block title %}
+PortalMedic - Lista de Pacientes
+{% endblock title %}
+{% block content %}
+        <h1>Listado de pacientes PortalMedic</h1>
+        <button><a href="{% url 'core:index' %}">Volver a HOME</a></button>
+    
+        {% for paciente in pacientes %}
+        <ul>
+            <li><h3>{{ paciente }}</h3></li>
+            <p>Apelldido: {{ paciente.apellido }}</p>
+            {% if paciente.nacionalidad %}
+                <p>País de origen: {{ medico.nacionalidad }}</p>
+            {% else %}
+                <p>País de origen: "No hay registro"</p>
+            {% endif %}
+        </ul>
+    {% endfor %}
+{% endblock content %}
 
-    {% for paciente in pacientes %}
-    <ul>
-        <li><h3>{{ paciente }}</h3></li>
-        <p>Apelldido: {{ paciente.apellido }}</p>
-        {% if paciente.nacionalidad %}
-            <p>País de origen: {{ medico.nacionalidad }}</p>
-        {% else %}
-            <p>País de origen: "No hay registro"</p>
-        {% endif %}
-    </ul>
-{% endfor %}
 
-</body>
-</html>
