--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -29,7 +29,7 @@
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" href="core:index">PortalMedic - Coder2024</a>
+        <a class="navbar-brand" href="{% url 'core:index' %}">PortalMedic - Coder2024</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
