--- a/PortalMedic/medicos/templates/medicos/medicos_list.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_list.html
@@ -29,7 +29,7 @@ PortalMedic > Listado
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger mr-2">Eliminar</button>
                 </form>
-                <a href="{% url 'medicos:medicos_modificar' medico.id %}" class="btn btn-primary">Modificar</a>
+                <a href="{% url 'medicos:medicos_modificar' %}" class="btn btn-primary">Modificar</a>
             </div>
         </div>
     </div>
