--- a/PortalMedic/medicos/templates/medicos/medicos_list.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_list.html
@@ -14,22 +14,22 @@ PortalMedic > Listado
 
     <div class="d-flex justify-content-between align-items-center">
         <h1 class="mt-5 mb-4">Cartilla de prestadores</h1>
-        <a href="{% url 'medicos:medicos_create' %}" class="btn btn-primary">Crear Prestador</a>
+        <a href="{% url 'medicos:medicos_create'%}" class="btn btn-primary">Crear Prestador</a>
     </div>
 
-    {% for medico in medicos %}
-    <div class="card mb-3">
+    {% for medico in medicos %}    <div class="card mb-3">
         <div class="card-body d-flex justify-content-between align-items-center">
             <div>
                 <h3 class="card-title">{{medico.apellido}}, {{ medico.nombre }}</h3>
                 <p class="card-text">Especialidad: {{ medico.especialidad }}</p>
+                <p class="card-text">MP: {{ medico.matricula }}</p>
             </div>
             <div>
-                <form method="post" action="{% url 'medicos:medicos_confirmar_eliminar' medico.id %}">
+                <form method="post" action="{% url 'medicos:medicos_confirm_delete' pk=medico.id%}">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-danger mr-2">Eliminar</button>
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                <a href="{% url 'medicos:medicos_update' pk=medico.id%}" class="btn btn-primary">Modificar</a>
                 </form>
-                <a href="{% url 'medicos:medicos_modificar' %}" class="btn btn-primary">Modificar</a>
             </div>
         </div>
     </div>
