--- a/PortalMedic/medicos/templates/medicos/index.html
+++ b/PortalMedic/medicos/templates/medicos/index.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-
+{% load static %}
 {% block title %}
 Portal Médico
 {% endblock title %}
@@ -19,6 +19,7 @@ Portal Médico
         </div>
     </div>
 </div>
+
 
 {% endblock content %}
 
