--- a/PortalMedic/medicos/templates/medicos/medicos_form.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_form.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block title %}
     PortalMedic - Crear
@@ -31,5 +32,8 @@
         </div>
     </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="{% static 'core/js/sweetAlert.js' %}"></script>
 
 {% endblock content %}
