Inicio de configuracion de loggin

--- a/PortalMedic/medicos/templates/medicos/medicos_list.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_list.html
@@ -6,10 +6,9 @@ PortalMedic > Listado
 
 {% block content %}
 <div class="container">
-    <div class= pb-lg-3>
+    <div class="pb-lg-3">
         <form action="{% url 'medicos:medicos_list' %}" method="get">
-            <input type="text" name="busqueda" placeholder="Buscar..." value="{{ request.GET.busqueda }}">
-            <button type="submit" class="">Buscar</button>
+            <input type="text" name="busqueda" placeholder="Buscar...">
         </form>
     </div>
 
