--- a/PortalMedic/medicos/templates/medicos/medicos_confirm_delete.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_confirm_delete.html
@@ -1,30 +1,19 @@
 {% extends 'core/base.html' %}
-<!-- {% load static %} -->
-
 {% block title %}
     PortalMedic - Eliminar
 {% endblock title %}
 
 {% block content %}
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-12 text-center">
-            <h1>¿Confirme que desea eliminar: "{{ object.apellido }},{{ object.nombre }}"</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 text-center">
-            <form method="POST" class="d-inline">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Confirmar</button>
-                <a href="{% url 'medicos:medicos_list' %}" class="btn btn-secondary ml-2">Cancelar</a>
-            </form>
-        </div>
-    </div>
-</div>
+    <p class="fs-5  fst-italic ">¿Confirma eliminar "{{ object.nombre }}"?</p>
+
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit">Confirmar</button>
+    </form>
+    <a href="{% url 'medicos:index' %}">Retornar a Pagina Principal</a>
     
-<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="{% static 'core/js/sweetAlert.js' %}"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="{% static 'core/js/sweetAlert_confirm_delete.js' %}"></script>
 
 {% endblock content %}
