login- logout + modificaciones en html

--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -39,6 +39,16 @@
                 <li class="nav-item"><a class="nav-link" href="#about">Proyectos</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Sobre Nostros</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send/?phone=%2B5493814761261&text&type=phone_number&app_absent=0" target="_blank">Contacto</a></li>
+                {% if user.is_authenticated %}
+                    <form action="{% url 'core:logout' %}" method="POST">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-item">Cerrar Sesion</button>
+                    </form>
+                    <!-- <li class="nav-item"><a class="nav-link" href="{% url 'core:logout' %}">>> Cerrar Sesion</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="">|| {{user.username.upper}} ||</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'core:login' %}">>>Iniciar Sesion</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
