--- a/PortalMedic/medicos/templates/medicos/medicos_list.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_list.html
@@ -17,7 +17,8 @@ PortalMedic > Listado
         <a href="{% url 'medicos:medicos_create'%}" class="btn btn-primary">Crear Prestador</a>
     </div>
 
-    {% for medico in medicos %}    <div class="card mb-3">
+    {% for medico in medicos %}    
+    <div class="card mb-3">
         <div class="card-body d-flex justify-content-between align-items-center">
             <div>
                 <h3 class="card-title">{{medico.apellido}}, {{ medico.nombre }}</h3>
