creador de usuarios - modificaciones en html y form

--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -63,8 +63,8 @@
 </body>
 
 {% block footer %}
-    <footer class="footer bg-black small text-center text-white-50 mt-auto">
-        <div class="container px-4 px-lg-5">Trabajo realizado para CODERHOUSE por OSCAR FARIAS</div>
-        <div class="container px-4 px-lg-5">Profesor: Estevan Acevedo - Tutoria: Juan Manuel Romano</div>
-    </footer>
+<footer class="footer mt-auto bg-black small text-center text-white-50">
+    <div class="container px-4 px-lg-5 font-monospace">Trabajo realizado para CODERHOUSE por OSCAR FARIAS</div>
+    <div class="container px-4 px-lg-5">Profesor: Estevan Acevedo - Tutoria: Juan Manuel Romano</div>
+</footer>
 {% endblock footer %}
