--- a/PortalMedic/core/templates/core/register.html
+++ b/PortalMedic/core/templates/core/register.html
@@ -2,25 +2,28 @@
 {% load static %}
 
 {% block title %}
-    PortalMedic | Acceso
+    PortalMedic | Registro
 {% endblock title %}
 
 {% block content %}
 <div class="d-flex vh-100">
     <div class="container my-auto">
+        
+        <!-- {% if user.is_authenticated %}
+            <p class="text-info ">{{mensaje}} - Bienvenido!</p>
+        {% endif %} -->
+
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
                 <div class="card">
                     <div class="card-body">
                         <form method="post">
                             {% csrf_token %}
-                            <input type="hidden" name="next" value="{% url 'core:index' %}">
                             <table class="table table-borderless">
                                 {{ form.as_table }}
-                                <a href="{% url 'core:register' %}" class="btn-danger" >Registrar Usuario</a>
                             </table>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                                <button type="submit" class="btn btn-primary">Registrarse</button>
                                 <a href="{% url 'core:index' %}" class="btn btn-secondary">Cancelar</a>
                             </div>
                         </form>
