--- a/PortalMedic/core/templates/core/register.html
+++ b/PortalMedic/core/templates/core/register.html
@@ -9,9 +9,9 @@
 <div class="d-flex vh-100">
     <div class="container my-auto">
         
-        <!-- {% if user.is_authenticated %}
+        {% if user.is_authenticated %}
             <p class="text-info ">{{mensaje}} - Bienvenido!</p>
-        {% endif %} -->
+        {% endif %}
 
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
