--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -42,7 +42,7 @@
                 {% if user.is_authenticated %}
                     <form action="{% url 'core:logout' %}" method="POST">
                         {% csrf_token %}
-                        <button type="submit" class="nav-item">Cerrar Sesion</button>
+                        <a type="submit" class="nav-link nav-item">Cerrar Sesion</a>
                     </form>
                     <!-- <li class="nav-item"><a class="nav-link" href="{% url 'core:logout' %}">>> Cerrar Sesion</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="">|| {{user.username.upper}} ||</a></li>
