--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -42,12 +42,12 @@
                 {% if user.is_authenticated %}
                     <form action="{% url 'core:logout' %}" method="POST">
                         {% csrf_token %}
-                        <a type="submit" class="nav-link nav-item">Cerrar Sesion</a>
+                        <button type="submit" class="nav-link nav-item bg-black ">Cerrar Sesion</button>
                     </form>
                     <!-- <li class="nav-item"><a class="nav-link" href="{% url 'core:logout' %}">>> Cerrar Sesion</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="">|| {{user.username.upper}} ||</a></li>
                 {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'core:login' %}">>>Iniciar Sesion</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'core:login' %}">Iniciar Sesion</a></li>
                 {% endif %}
             </ul>
         </div>
