--- a/PortalMedic/core/templates/core/index.html
+++ b/PortalMedic/core/templates/core/index.html
@@ -44,7 +44,7 @@ PortalMedic - Inicio
                     buscar la historia clínica de un paciente en papel. </p>
             </div>
         </div>
-        <img class="img-fluid" src="{% static '/core/assets/img/logo_serpiente.png' %}" alt="..." />
+        <img class="img-fluid" src="{% static '/core/assets/img/logo_serpiente.png' %}" alt="Logo Medio" />
     </div>
 </section>
 <!-- Projects-->
