--- a/PortalMedic/pacientes/templates/pacientes/pacientes_list.html
+++ b/PortalMedic/pacientes/templates/pacientes/pacientes_list.html
@@ -1,19 +1,43 @@
+{% extends 'core/base.html' %}
+
 {% block title %}
-PortalMedic - Lista de Pacientes
+PortalMedic > Consultar Pacientes
 {% endblock title %}
+
 {% block content %}
-        <h1>Listado de pacientes PortalMedic</h1>
-        <button><a href="{% url 'core:index' %}">Volver a HOME</a></button>
-    
-        {% for paciente in pacientes %}
-        <ul>
-            <li><h3>{{ paciente }}</h3></li>
-            <p>Apelldido: {{ paciente.apellido }}</p>
-           {% if paciente.nacionalidad %}
-                <p>País de origen: {{ paciente.nacionalidad }}</p>
-            {% else %}
-                <p>País de origen: "No hay registro"</p>
-            {% endif %}
-        </ul>
+<div class="container">
+    <div class="pb-lg-3">
+        <form action="{% url 'pacientes:pacientes_list' %}" method="get">
+            <input type="text" name="busqueda" placeholder="Buscar paciente">
+        </form>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-center">
+        <h1 class="mt-5 mb-4">Portal Pacientes</h1>
+        <a href="{% url 'pacientes:pacientes_create'%}" class="btn btn-primary">Ingresar Nuevo Paciente</a>
+    </div>
+
+    {% for paciente in pacientes %}    
+    <div class="card mb-3">
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+                <h3 class="card-title">{{paciente.apellido}}, {{ paciente.nombre }}</h3>
+                <p class="card-text">DNI: {{ paciente.DNI }}</p>
+                <p class="card-text">Obra Social: {{ paciente.obraSocial }}</p>
+            </div>
+            <div>
+                <form method="post" action="{% url 'pacientes:pacientes_confirm_delete' pk=paciente.id%}">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                <a href="{% url 'pacientes:pacientes_update' pk=paciente.id%}" class="btn btn-primary">Modificar</a>
+                <a href="{% url 'pacientes:paciente_hc' pk=paciente.id %}" class="btn btn-primary">Ver Historia Clínica</a>
+                </form>
+            </div>
+        </div>
+    </div>
     {% endfor %}
+    <a href="{% url 'medicos:medicos_list' %}" class="btn btn-primary">Volver a Prestadores</a>
+</div>
+
+
 {% endblock content %}
