--- a/PortalMedic/pacientes/templates/pacientes/modificar_hc.html
+++ b/PortalMedic/pacientes/templates/pacientes/modificar_hc.html
@@ -16,6 +16,7 @@
                 {{ form.as_p }}
                 <div class="d-grid">
                     <button type="submit" class="btn btn-primary btn-block">Guardar</button>
+                    <a href= "{% url 'pacientes:pacientes_list' %} " class="btn btn-secondary btn-block">Volver a Paciente</a>
                 </div>
             </form>
         </div>
