--- a/PortalMedic/pacientes/templates/pacientes/paciente_hc.html
+++ b/PortalMedic/pacientes/templates/pacientes/paciente_hc.html
@@ -6,7 +6,7 @@ PortalMedic - Lista de Pacientes
 {% endblock title %}
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Historia Clínica Paciente Completa</h1>
+    <h1 class="text-center mb-4">Historia Clínica Completa</h1>
     
     <div class="text-right mb-3">
         <a href="{% url 'core:index' %}" class="btn btn-primary">Volver a HOME</a>
