--- a/PortalMedic/pacientes/templates/pacientes/guardar_historia.html
+++ b/PortalMedic/pacientes/templates/pacientes/guardar_historia.html
@@ -22,7 +22,7 @@
                 </div>
             </form>
             <div class="mt-3 text-center">
-                <a href="{% url 'pacientes:ver_historia' paciente.id %}" class="btn btn-link">Ver historias clínicas</a>
+                <a href="{% url 'pacientes:ver_historia' paciente.id %}" class="btn btn-link">Volver A Historias clínicas</a>
             </div>
         </div>
     </div>
