--- a/PortalMedic/medicos/templates/medicos/medicos_list.html
+++ b/PortalMedic/medicos/templates/medicos/medicos_list.html
@@ -7,8 +7,11 @@ PortalMedic > Listado
 {% block content %}
 <div class="container">
     <div class="pb-lg-3">
+
         <form action="{% url 'medicos:medicos_list' %}" method="get">
-            <input type="text" name="busqueda" placeholder="Buscar...">
+            <input type="" name="busqueda" placeholder="Buscar...">
+            <button class="" type="submit">Buscar</button>
+            <button class="" type="submit"><a href="{% url 'medicos:medicos_list' %}">Mostrar Todos</a></button>
         </form>
     </div>
 
@@ -17,7 +20,10 @@ PortalMedic > Listado
         <a href="{% url 'medicos:medicos_create'%}" class="btn btn-primary">Crear Prestador</a>
     </div>
 
-    {% for medico in medicos %}    
+
+    {% if medicos %}
+
+    {% for medico in medicos %}
     <div class="card mb-3">
         <div class="card-body d-flex justify-content-between align-items-center">
             <div>
@@ -29,15 +35,17 @@ PortalMedic > Listado
                 <form method="post" action="{% url 'medicos:medicos_confirm_delete' pk=medico.id%}">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Eliminar</button>
-                <a href="{% url 'medicos:medicos_update' pk=medico.id%}" class="btn btn-primary">Modificar</a>
-                <a href="{% url 'pacientes:pacientes_list'%}" class="btn btn-primary">Mis Pacientes</a>
+                    <a href="{% url 'medicos:medicos_update' pk=medico.id%}" class="btn btn-primary">Modificar</a>
+                    <a href="{% url 'pacientes:pacientes_list'%}" class="btn btn-primary">Mis Pacientes</a>
                 </form>
             </div>
         </div>
     </div>
     {% endfor %}
+    {% else %}
+    <h1 class="text-center">No se han encontrado resultados</h1>
+    {% endif %}
     <a href="{% url 'core:index' %}" class="btn btn-primary">Volver a HOME</a>
 </div>
-
 
 {% endblock content %}
