--- a/PortalMedic/pacientes/templates/pacientes/nueva_hc.html
+++ b/PortalMedic/pacientes/templates/pacientes/nueva_hc.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <h1>Nueva Historia Clínica</h1>
-<form method="post">
+<form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
