--- a/PortalMedic/core/templates/core/base.html
+++ b/PortalMedic/core/templates/core/base.html
@@ -69,6 +69,6 @@
 <footer class="footer mt-auto bg-black big text-center text-white-50">
     <div class="container big px-4 px-lg-5 font-monospace">Trabajo realizado por OSCAR FARIAS para <a
             href="https://www.coderhouse.com/ar/">CODERHOUSE</a></div>
-    <div class="container px-4 px-lg-5">Profesor: <a href="https://www.linkedin.com/in/esteban-acevedo-aberastain/?originalSubdomain=ar">Esteban Acevedo</a> - Tutoria: Juan Manuel Romano</div>
+    <div class="container px-4 px-lg-5">Profesor: <a href="https://www.linkedin.com/in/esteban-acevedo-aberastain/?originalSubdomain=ar">Esteban Acevedo</a> - Tutoria: Hugo Mon - Juan Manuel Romano</div>
 </footer>
 {% endblock footer %}
